--- a/public/index.html
+++ b/public/index.html
@@ -3,141 +3,84 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- atmanad0001 -->
+    <meta name="google-site-verification" content="p_HPVuZ2XopP_fW7A_-Sv3Gw9mMuKiQl_ZaJL_xNcYY" />
+    <!-- info-virual -->
+    <meta name="google-site-verification" content="jErw__jrUi2gO1nXiCVlGnF9V56G0hCrmilr1aCHSfA" />
+    <meta name="description" content="Home Page of Virtual Police Station. Login to continue use our services">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Home</title>
     <!-- VPS icon -->
     <link rel="icon" href="img/icon_vps.png" type="image/x-icon">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"> -->
+    <link rel="stylesheet" href="css/fontawesome/css/all.min.css">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Material Design Bootstrap -->
     <link rel="stylesheet" href="css/mdb.min.css">
     <!-- Your custom styles (optional) -->
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
-<body class="hidden-scrollbar">
-
+<body>
     <!-- project starts here-->
-
-    <section class="form-elegant scrollbar-light-blue">
-
-        <!-------------Navbar---------------->
-
-        <nav class="navbar navbar-expand-lg navbar-dark primary-color fixed-top">
-
-            <!-- Navbar brand -->
-            <a class="navbar-brand" href="#">Virtual Police Station</a>
-
-            <!-- Collapse button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Collapsible content -->
-            <div class="collapse navbar-collapse" id="basicExampleNav">
-
-                <!-- Links -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link mx-xl-4 active" href="#">Home</a>
-                    </li>
-                    <li class="nav-item mx-xl-4">
-                        <a class="nav-link" href="signin.html" data-target="target-signin">Sign in</a>
-                    </li>
-                    <li class="nav-item mx-xl-4">
-                        <a class="nav-link" href="signup.html" data-target="target-signup">Sign Up</a>
-                    </li>
-                </ul>
-                <!-- Links -->
-                <form class="form-inline">
-                    <div class="md-form my-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    </div>
-                </form>
-            </div>
-        </nav>
-
-        <!------------ Navbar---------------->
-
-        <div class="container" style="margin-top: 120px;">
-            <h3 class="">Dear, please Login to access VPS services</h3>
-        </div>
-
-        <!----------------------------- footer start ---------------------------------->
-
-        <footer class="page-footer font-small stylish-color-dark pt-4 mt-5 fixed-bottom" id="footer">
-            <!-- Social buttons -->
-            <ul class="list-unstyled list-inline text-center">
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-fb mx-1">
-                        <i class="fab fa-facebook-f"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-tw mx-1">
-                        <i class="fab fa-twitter"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-gplus mx-1">
-                        <i class="fab fa-google-plus-g"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-li mx-1">
-                        <i class="fab fa-linkedin-in"> </i>
-                    </a>
-                </li>
+    <!-------------Navbar---------------->
+    <nav class="navbar navbar-expand-lg navbar-dark primary-color fixed-top">
+        <a class="navbar-brand" href="#">Virtual Police Station</a>
+        <!-- Collapse button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse" id="basicExampleNav">
+            <!-- Links -->
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active"><a class="nav-link mx-xl-4" href="index.html">Home</a></li>
+                <li class="nav-item mx-xl-4"><a class="nav-link" href="signin.html">Sign in</a></li>
+                <li class="nav-item mx-xl-4"><a class="nav-link" href="signup.html">Sign Up</a></li>
             </ul>
-            <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
-                <a href="#">Ghost-Gang.com</a>
-            </div>
-            <!-- Copyright -->
-        </footer>
-        <!------------------- footer start ------------------------------->
-    </section>
-
+            <!-- Links -->
+            <form class="form-inline">
+                <div class="md-form my-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                </div>
+            </form>
+        </div>
+    </nav>
+    <!------------ Navbar---------------->
+    <div class="container margin-top">
+        <h3>Dear, please Login to access VPS services</h3>
+    </div>
+    <footer class="page-footer font-small stylish-color-dark pt-4 fixed-bottom" id="footer">
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-facebook-f fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab red-text fa-google-plus-g fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-twitter fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab pink-text fa-instagram fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-linkedin-in fa-lg"> </i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab red-text fa-pinterest-p fa-lg"></i></a></li>
+        </ul>
+        <div class="footer-copyright text-center py-3 mt-4">© 2020 Copyright:<a href="#">Ghost-Gang.com</a></div>
+    </footer>
     <!------ project ends here---------->
-
-    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
-
-    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
-
-    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
-
-    <!-- Add Firebase products that you want to use -->
-    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script>
-
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-auth.js"></script> -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script> -->
     <!-- jQuery -->
     <script defer type="text/javascript" src="js/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
-    <script defer type="text/javascript" src="js/popper.min.js"></script>
+    <!-- <script defer type="text/javascript" src="js/popper.min.js"></script> -->
     <!-- Bootstrap core JavaScript -->
     <script defer type="text/javascript" src="js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script defer type="text/javascript" src="js/mdb.min.js"></script>
+    <!-- <script defer type="text/javascript" src="js/mdb.min.js"></script> -->
     <!-- custom scripts (optional) -->
-    <script defer type="text/javascript" src="js/index.js"></script>
-    <script>
-        window.onload = function () {
-            firebase.auth().onAuthStateChanged(user => {
-                if (user) {
-                    window.location.href = 'home.html';
-                }
-            });
-        }
-    </script>
+    <!-- <script defer type="text/javascript" src="js/index.js"></script> -->
 </body>
 
 </html>
