--- a/public/newfir.html
+++ b/public/newfir.html
@@ -9,9 +9,7 @@
     <!-- VPS icon -->
     <link rel="icon" href="img/icon_vps.png" type="image/x-icon">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <link rel="stylesheet" href="css/fontawesome/css/all.min.css">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Material Design Bootstrap -->
@@ -21,45 +19,44 @@
 </head>
 
 <body>
-
     <!-- Project starts here-->
-
     <div class="container my-4" id="target-signin" style="width:fit-content;">
         <form class="border border-light p-5" id="signin-form">
-
             <p class="h4 mb-4 text-center">Register FIR</p>
-
-            <input type="text" id="signInEmail" class="form-control mb-2" placeholder="Name">
+            <!-- 
+            <input type="text" id="name" class="form-control mb-2" placeholder="Name">
             <input type="number" id="signInEmail" class="form-control mb-2" placeholder="Aadhaar Number">
             <input type="datetime-local" id="signInEmail" class="form-control mb-2">
-            <input type="number" id="signInEmail" class="form-control mb-2" placeholder="Mobile Number">
-            <textarea class="input-border" name="" id="" cols="50" rows="4" placeholder="Describe your concern"></textarea>
+            <input type="number" id="signInEmail" class="form-control mb-2" placeholder="Mobile Number"> -->
+            <textarea class="input-border" name="" id="statement" cols="50" rows="4" placeholder="Describe your concern"></textarea>
             <div class="my-2">
                 <label for="evidence" class="d-inline-block mr-2">Evidence:</label>
-                <input type="file" id="evidence" class="d-inline-block">                
+                <input type="file" id="evidence" class="d-inline-block">
             </div>
-            <input type="number" id="textInput" class="form-control mb-2" placeholder="Enter OTP" >
+            <input type="number" id="textInput" class="form-control mb-2" placeholder="Enter OTP">
             <a href="#" class="btn btn-primary mr-4 btn-md mb-2">Request OTP</a>
             <a href="#" class="btn btn-primary btn-md mb-2">Verify</a>
-<!-- 
-            <div class="d-flex justify-content-between">
-                <div>
-                    <div class="custom-control custom-checkbox mr-3">
-                        <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
-                        <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
-                    </div>
-                </div>
-                <div>
-                    <a href="#">Forgot password?</a>
-                </div>
-            </div> -->
-
-            <button class="btn btn-primary btn-block my-4" type="submit">Submit</button>
-
+            <button class="btn btn-primary btn-block my-4" id="newFir" type="button">Submit</button>
         </form>
     </div>
-
+    <footer class="page-footer font-small stylish-color-dark pt-4 mt-5" id="footer">
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-facebook-f fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab red-text fa-google-plus-g fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-twitter fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab pink-text fa-instagram fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-linkedin-in fa-lg"> </i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab red-text fa-pinterest-p fa-lg"></i></a></li>
+        </ul>
+        <div class="footer-copyright text-center py-3 mt-4">© 2020 Copyright:<a href="#">Ghost-Gang.com</a></div>
+    </footer>
     <!-- Project ends here-->
+
+    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script>
 
     <!-- jQuery -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
