--- a/public/signin.html
+++ b/public/signin.html
@@ -9,9 +9,8 @@
     <!-- VPS icon -->
     <link rel="icon" href="img/icon_vps.png" type="image/x-icon">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"> -->
+    <link rel="stylesheet" href="css/fontawesome/css/all.min.css">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Material Design Bootstrap -->
@@ -20,136 +19,82 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="hidden-scrollbar">
-
+<body>
     <!-- project starts here-->
-
-    <section class="form-elegant scrollbar-light-blue">
-
-        <!-------------Navbar---------------->
-
-        <nav class="navbar navbar-expand-lg navbar-dark primary-color fixed-top">
-
-            <!-- Navbar brand -->
-            <a class="navbar-brand" href="#">Virtual Police Station</a>
-
-            <!-- Collapse button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Collapsible content -->
-            <div class="collapse navbar-collapse" id="basicExampleNav">
-
-                <!-- Links -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link mx-xl-4" href="index.html">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item mx-xl-4">
-                        <a class="nav-link" href="signin.html" data-target="target-signin">Sign in</a>
-                    </li>
-                    <li class="nav-item mx-xl-4">
-                        <a class="nav-link" href="signup.html" data-target="target-signup">Sign Up</a>
-                    </li>
-                </ul>
-                <!-- Links -->
-                <form class="form-inline">
-                    <div class="md-form my-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    </div>
-                </form>
-            </div>
-        </nav>
-
-        <!------------ Navbar---------------->
-
-        <!-------------- sign in start --------->
-
-        <div class="container" style="width:fit-content; margin-top: 120px;">
-            <form class="border border-light p-5" id="signInForm">
-
-                <p class="h4 mb-4 text-center">Sign In</p>
-
-                <input type="email" id="email" class="form-control mb-4" placeholder="E-mail">
-
-                <input type="password" id="password" class="form-control mb-4" placeholder="Password">
-
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <div class="custom-control custom-checkbox mr-3">
-                            <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
-                            <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
-                        </div>
-                    </div>
-                    <div>
-                        <a href="forgotpassword.html">Forgot password?</a>
-                    </div>
-                </div>
-
-                <button class="btn btn-primary btn-block my-4" type="button" onclick="signIn()">Sign In</button>
-
-                <div class="text-center">
-                    <p>Not a member?
-                        <a href="signup.html">Register</a>
-                    </p>
-                </div>
+    <!-------------Navbar---------------->
+    <nav class="navbar navbar-expand-lg navbar-dark primary-color fixed-top">
+        <a class="navbar-brand" href="#">Virtual Police Station</a>
+        <!-- Collapse button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse" id="basicExampleNav">
+            <!-- Links -->
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a class="nav-link mx-xl-4" href="index.html">Home</a></li>
+                <li class="nav-item mx-xl-4 active"><a class="nav-link" href="signin.html" data-target="target-signin">Sign in</a></li>
+                <li class="nav-item mx-xl-4"><a class="nav-link" href="signup.html" data-target="target-signup">Sign Up</a></li>
+            </ul>
+            <!-- Links -->
+            <form class="form-inline">
+                <div class="md-form my-0"><input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"></div>
             </form>
         </div>
-
-        <!--------------- sign in end ---------->
-
-        <!--------------------------- footer start ----------------------------->
-
-        <footer class="page-footer font-small stylish-color-dark pt-4 mt-5" id="footer">
-            <!-- Social buttons -->
-            <ul class="list-unstyled list-inline text-center">
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-fb mx-1">
-                        <i class="fab fa-facebook-f"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-tw mx-1">
-                        <i class="fab fa-twitter"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-gplus mx-1">
-                        <i class="fab fa-google-plus-g"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-li mx-1">
-                        <i class="fab fa-linkedin-in"> </i>
-                    </a>
-                </li>
-            </ul>
-            <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
-                <a>Ghost-Gang.com</a>
+    </nav>
+    <!------------ Navbar---------------->
+    <!-------------- sign in start --------->
+    <div class="container z-depth-2 margin-top fit-content" style="background-color: white;">
+        <div role="alert" aria-live="assertive" aria-atomic="true" class="toast position" data-autohide="false">
+            <div class="toast-header"><i class="fas fa-exclamation-triangle red-text mr-3"></i><b>Notification</b><button type="button" class="close ml-auto" data-dismiss="toast"
+                    aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+            <div class="toast-body bg-danger"><strong></strong></div>
+        </div>
+        <form class="py-5 px-3" id="signInForm">
+            <p class="h4 mb-5 text-center">Sign In</p>
+            <div class="md-form input-with-pre-icon">
+                <i class="fas fa-envelope  input-prefix"></i>
+                <input type="email" id="email" class="form-control">
+                <label for="email" class="ml-2">E-mail address</label>
             </div>
-            <!-- Copyright -->
-        </footer>
+            <div class="md-form  input-with-pre-icon">
+                <i class="fas fa-lock  input-prefix"></i>
+                <input type="password" id="password" class="form-control">
+                <label for="password" class="ml-2">Password</label>
+            </div>
+            <div class="d-flex justify-content-between">
+                <div>
+                    <div class="custom-control custom-checkbox mr-3">
+                        <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
+                        <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
+                    </div>
+                </div>
+                <div><a href="forgotpassword.html">Forgot password?</a></div>
+            </div>
+            <button class="btn btn-primary btn-block my-4 btn-rounded" id="signIn" type="button">Sign In</button>
+            <div class="text-center">
+                <p>Not a member?<a href="signup.html"> Register</a></p>
+            </div>
+        </form>
+    </div>
+    <!--------------- sign in end ---------->
+    <footer class="page-footer font-small stylish-color-dark pt-4 footer-position" id="footer">
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-facebook-f fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab red-text fa-google-plus-g fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-twitter fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab pink-text fa-instagram fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-linkedin-in fa-lg"> </i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab red-text fa-pinterest-p fa-lg"></i></a></li>
+        </ul>
+        <div class="footer-copyright text-center py-3 mt-4">© 2020 Copyright:<a href="#">Ghost-Gang.com</a></div>
+    </footer>
+    <!-- End of project-->
 
-        <!------------------- footer start ------------------------------->
-
-    </section>
-
-    <!-- End your project here-->
-
-    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
-
-    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
-
-    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
-
-    <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script>
 
@@ -163,15 +108,7 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- my custom scripts -->
     <script type="text/javascript" src="js/index.js"></script>
-
-    <script>
-        firebase.auth().onAuthStateChanged(user => {
-            if (user) {
-                window.location.href = 'home.html';
-            }
-        });
-    </script>
-
+    <script>firebase.auth().onAuthStateChanged(user => { if (user) { window.location.href = 'home.html'; } });</script>
 </body>
 
 </html>
