--- a/public/signup.html
+++ b/public/signup.html
@@ -9,9 +9,7 @@
     <!-- VPS icon -->
     <link rel="icon" href="img/icon_vps.png" type="image/x-icon">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <link rel="stylesheet" href="css/fontawesome/css/all.min.css">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Material Design Bootstrap -->
@@ -20,153 +18,87 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="hidden-scrollbar">
-
+<body>
     <!-- project starts here-->
-
-    <section class="form-elegant scrollbar-light-blue">
-        <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark primary-color fixed-top">
-
-            <!-- Navbar brand -->
-            <a class="navbar-brand" href="#">Virtual Police Station</a>
-
-            <!-- Collapse button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Collapsible content -->
-            <div class="collapse navbar-collapse" id="basicExampleNav">
-
-                <!-- Links -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link mx-xl-4 logged-in" href="index.html">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item mx-xl-4">
-                        <a class="nav-link" href="signin.html" data-target="target-signin">Sign in</a>
-                    </li>
-                    <li class="nav-item mx-xl-4 logged-out">
-                        <a class="nav-link" href="signup.html" data-target="target-signup">Sign Up</a>
-                    </li>
-                </ul>
-                <!-- Links -->
-                <form class="form-inline">
-                    <div class="md-form my-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    </div>
-                </form>
-            </div>
-        </nav>
-        <!------------ Navbar---------------->
-
-        <!-------------- sign up start --------->
-
-        <div class="container" style="width: fit-content;margin-top: 120px;">
-            <form class="border border-light p-5" id="signUpForm">
-
-                <p class="h4 mb-4 text-center">Sign Up</p>
-                <div class="row">
-                    <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sFName" class="form-control mb-2" placeholder="First name"></div>
-                    <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sLName" class="form-control mb-2" placeholder="Last name"></div>
-                </div>
-                <div class="row">
-                    <div class="d-inline-block col-md-6 col-xs-12"><input type="email" id="sEmail" class="form-control mb-2" placeholder="E-mail"></div>
-                    <div class="d-inline-block col-md-6 col-xs-12"><input type="number" id="sAadhaar" class="form-control mb-4" placeholder="Aadhaar Number"></div>
-                </div>
-
-                <input type="password" id="sPassword" class="form-control" placeholder="Password">
-                <small class="form-text text-muted mb-4">Minimum 8 characters long, an uppercase, a lowercase, a number, a special character.</small>
-
-
-                <input type="number" id="sOtp" class="form-control mb-2" placeholder="Enter OTP">
-                <a href="#" class="btn btn-primary mr-4 btn-md mb-3">Request OTP</a>
-                <a href="#" class="btn btn-primary btn-md mb-3">Verify</a>
-
-                <div class="row">
-                    <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sAddress" class="form-control mb-2 mr-auto" placeholder="Address"></div>
-                    <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sCity" class="form-control mb-2 mr-auto" placeholder="City"></div>
-                </div>
-
-                <div class="row">
-                    <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sDistrict" class="form-control mb-2 mr-auto" placeholder="District"></div>
-                    <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sState" class="form-control mb-2 mr-auto" placeholder="State"></div>
-                </div>
-
-                <div class="row">
-                    <div class="d-inline-block col-md-6 col-xs-12"><input type="number" id="sPincode" class="form-control mb-2" placeholder="Pincode"></div>
-                    <div class="d-inline-block col-md-6 col-xs-12"><input type="number" id="sPhone" class="form-control mb-2" placeholder="Phone number"></div>
-                </div>
-
-                <button class="btn btn-primary my-4 btn-block" type="button" onclick="signUp()">Sign Up</button>
-
-                <div class="text-center">
-                    <hr>
-                    <p>By clicking
-                        <em>Sign up</em> you agree to our
-                        <a class="text-primary">privacy policy</a> and
-                        <a class="text-primary">terms of service</a>.
-                    </p>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark primary-color fixed-top">
+        <a class="navbar-brand" href="#">Virtual Police Station</a>
+        <!-- Collapse button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse" id="basicExampleNav">
+            <!-- Links -->
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a class="nav-link mx-xl-4" href="index.html">Home</a></li>
+                <li class="nav-item mx-xl-4"><a class="nav-link" href="signin.html">Sign in</a></li>
+                <li class="nav-item mx-xl-4 active"><a class="nav-link" href="signup.html">Sign Up</a></li>
+            </ul>
+            <!-- Links -->
+            <form class="form-inline">
+                <div class="md-form my-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                 </div>
             </form>
         </div>
-        <!--------------- sign up end ---------->
-
-        <!--------------------------- footer start ----------------------------->
-
-        <footer class="page-footer font-small stylish-color-dark pt-4 mt-5" id="footer">
-            <!-- Social buttons -->
-            <ul class="list-unstyled list-inline text-center">
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-fb mx-1">
-                        <i class="fab fa-facebook-f"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-tw mx-1">
-                        <i class="fab fa-twitter"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-gplus mx-1">
-                        <i class="fab fa-google-plus-g"> </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-li mx-1">
-                        <i class="fab fa-linkedin-in"> </i>
-                    </a>
-                </li>
-            </ul>
-            <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
-                <a href="#">Ghost-Gang.com</a>
+    </nav>
+    <!-------------- sign up start --------->
+    <div class="container z-depth-2 margin-top fit-content" style="background-color: white;">
+        <div role="alert" aria-live="assertive" aria-atomic="true" class="toast position" data-autohide="false">
+            <div class="toast-header"><i class="fas fa-exclamation-triangle red-text mr-3"></i><b class="mr-4">Notification</b><button type="button" class="close ml-auto" data-dismiss="toast"
+                    aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+            <div class="toast-body bg-danger"><strong></strong></div>
+        </div>
+        <form class="py-5 px-3" id="signUpForm">
+            <p class="h4 mb-4 text-center">Sign Up</p>
+            <div class="row">
+                <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sFName" class="form-control mb-2" placeholder="First name"></div>
+                <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sLName" class="form-control mb-2" placeholder="Last name"></div>
             </div>
-            <!-- Copyright -->
-        </footer>
-
-        <!------------------- footer start ------------------------------->
-
-    </section>
-
+            <div class="row">
+                <div class="d-inline-block col-md-6 col-xs-12"><input type="email" id="sEmail" class="form-control mb-2" placeholder="E-mail"></div>
+                <div class="d-inline-block col-md-6 col-xs-12"><input type="number" id="sAadhaar" class="form-control mb-4" placeholder="Aadhaar Number"></div>
+            </div>
+            <input type="password" id="sPassword" class="form-control" placeholder="Password">
+            <small class="form-text text-muted mb-4">Minimum 8 characters long, an uppercase, a lowercase, a number, a special character.</small>
+            <input type="number" id="sOtp" class="form-control mb-2" placeholder="Enter OTP">
+            <a href="#" class="btn btn-primary mr-4 btn-md mb-3">Request OTP</a>
+            <a href="#" class="btn btn-primary btn-md mb-3">Verify</a>
+            <div class="row">
+                <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sAddress" class="form-control mb-2 mr-auto" placeholder="Address"></div>
+                <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sCity" class="form-control mb-2 mr-auto" placeholder="City"></div>
+            </div>
+            <div class="row">
+                <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sDistrict" class="form-control mb-2 mr-auto" placeholder="District"></div>
+                <div class="d-inline-block col-md-6 col-xs-12"><input type="text" id="sState" class="form-control mb-2 mr-auto" placeholder="State"></div>
+            </div>
+            <div class="row">
+                <div class="d-inline-block col-md-6 col-xs-12"><input type="number" id="sPincode" class="form-control mb-2" placeholder="Pincode"></div>
+                <div class="d-inline-block col-md-6 col-xs-12"><input type="number" id="sPhone" class="form-control mb-2" placeholder="Phone number"></div>
+            </div>
+            <button class="btn btn-primary my-4 btn-block" type="button" id="signUp">Sign Up</button>
+        </form>
+    </div>
+    <!-- sign up end -->
+    <footer class="page-footer font-small stylish-color-dark pt-4 mt-md-5" id="footer">
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-facebook-f fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab red-text fa-google-plus-g fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-twitter fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab pink-text fa-instagram fa-lg"></i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab blue-text fa-linkedin-in fa-lg"> </i></a></li>
+            <li class="list-inline-item"><a class="mx-1 mx-md-2"><i class="fab red-text fa-pinterest-p fa-lg"></i></a></li>
+        </ul>
+        <div class="footer-copyright text-center py-3 mt-4">© 2020 Copyright:<a href="#">Ghost-Gang.com</a></div>
+    </footer>
     <!--project ends here-->
-
-    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
-
-    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
-
-    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
-
-    <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-firestore.js"></script>
-
     <!-- jQuery -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
@@ -177,7 +109,6 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- custom script -->
     <script type="text/javascript" src="js/index.js"></script>
-
 </body>
 
 </html>
