--- a/public/home.html
+++ b/public/home.html
@@ -126,7 +126,7 @@
             <!-- Text -->
             <p class="card-text">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi.</p>
             <!-- Button -->
-            <a class="btn btn-primary">Chat BOT</a>
+            <a href="chatbot.html" class="btn btn-primary">Chat BOT</a>
           </div>
         </div>
       </div>
