--- a/public/firstatus.html
+++ b/public/firstatus.html
@@ -49,6 +49,7 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- Your custom scripts (optional) -->
+    <script src="js/firebaseConfig.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 
 </body>
