--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -16,7 +16,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Learn how to use the Firebase platform on the Web">
+  <meta name="description" content="Chat service for VPS">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VPS Chat</title>
 
@@ -28,13 +28,13 @@
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="Friendly Chat">
+  <meta name="application-name" content="VPS Chat">
   <meta name="theme-color" content="#303F9F">
 
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Friendly Chat">
+  <meta name="apple-mobile-web-app-title" content="VPS Chat">
   <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
 
   <!-- Tile icon for Win8 -->
@@ -121,8 +121,8 @@
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-storage.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-performance.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-messaging.js"></script>
+  <script src="js/firebaseConfig.js"></script>
   <script src="js/index.js"></script>
-
   <script src="scripts/main.js"></script>
 </body>
 
