--- a/public/forgotpassword.html
+++ b/public/forgotpassword.html
@@ -41,6 +41,7 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- custom scripts (optional) -->
+    <script src="js/firebaseConfig.js"></script>
     <script type="text/javascript" src="js/index.js" defer></script>
 </body>
 
