--- a/public/signin.html
+++ b/public/signin.html
@@ -34,7 +34,7 @@
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link mx-xl-4" href="index.html">Home</a></li>
-                <li class="nav-item mx-xl-4 active"><a class="nav-link" href="signin.html" data-target="target-signin">Sign in</a></li>
+                <li class="nav-item mx-xl-4 active disabled"><a class="nav-link" href="signin.html" data-target="target-signin">Sign in</a></li>
                 <li class="nav-item mx-xl-4"><a class="nav-link" href="signup.html" data-target="target-signup">Sign Up</a></li>
             </ul>
             <!-- Links -->
@@ -43,9 +43,8 @@
             </form>
         </div>
     </nav>
-    <!------------ Navbar---------------->
-    <!-------------- sign in start --------->
-    <div class="container z-depth-2 margin-top fit-content" style="background-color: white;">
+    <!-- signin start -->
+    <div class="container z-depth-1 margin-top fit-content" style="background-color: white;">
         <div role="alert" aria-live="assertive" aria-atomic="true" class="toast position" data-autohide="false">
             <div class="toast-header"><i class="fas fa-exclamation-triangle red-text mr-3"></i><b>Notification</b><button type="button" class="close ml-auto" data-dismiss="toast"
                     aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
@@ -107,6 +106,7 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- my custom scripts -->
+    <script src="js/firebaseConfig.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script>firebase.auth().onAuthStateChanged(user => { if (user) { window.location.href = 'home.html'; } });</script>
 </body>
