--- a/public/signup.html
+++ b/public/signup.html
@@ -34,7 +34,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link mx-xl-4" href="index.html">Home</a></li>
                 <li class="nav-item mx-xl-4"><a class="nav-link" href="signin.html">Sign in</a></li>
-                <li class="nav-item mx-xl-4 active"><a class="nav-link" href="signup.html">Sign Up</a></li>
+                <li class="nav-item mx-xl-4 active disabled"><a class="nav-link" href="#">Sign Up</a></li>
             </ul>
             <!-- Links -->
             <form class="form-inline">
@@ -44,8 +44,8 @@
             </form>
         </div>
     </nav>
-    <!-------------- sign up start --------->
-    <div class="container z-depth-2 margin-top fit-content" style="background-color: white;">
+    <!-- sign up start -->
+    <div class="container z-depth-1 margin-top fit-content" style="background-color: white;">
         <div role="alert" aria-live="assertive" aria-atomic="true" class="toast position" data-autohide="false">
             <div class="toast-header"><i class="fas fa-exclamation-triangle red-text mr-3"></i><b class="mr-4">Notification</b><button type="button" class="close ml-auto" data-dismiss="toast"
                     aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
@@ -61,9 +61,9 @@
                 <div class="d-inline-block col-md-6 col-xs-12"><input type="email" id="sEmail" class="form-control mb-2" placeholder="E-mail"></div>
                 <div class="d-inline-block col-md-6 col-xs-12"><input type="number" id="sAadhaar" class="form-control mb-4" placeholder="Aadhaar Number"></div>
             </div>
-            <input type="password" id="sPassword" class="form-control" placeholder="Password">
+            <input type="password" class="form-control" id="sPassword" placeholder="Password">
             <small class="form-text text-muted mb-4">Minimum 8 characters long, an uppercase, a lowercase, a number, a special character.</small>
-            <input type="number" id="sOtp" class="form-control mb-2" placeholder="Enter OTP">
+            <input type="number" class="form-control mb-2" id="sOtp" placeholder="Enter OTP">
             <a href="#" class="btn btn-primary mr-4 btn-md mb-3">Request OTP</a>
             <a href="#" class="btn btn-primary btn-md mb-3">Verify</a>
             <div class="row">
@@ -108,6 +108,7 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- custom script -->
+    <script src="js/firebaseConfig.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 
